--- a/practice_index.css
+++ b/practice_index.css
@@ -3,6 +3,10 @@
   font-family: 'Times New Roman', Times, serif;
 }
 
+.homepage {
+  display: flex;
+}
+
 .homepage__sidebar {
   background-color: #3c3c3c;
   width: 250px;
@@ -10,6 +14,7 @@
   list-style-type: none;
   padding: 0;
   text-align: center;
+  margin-right: 20px;
 }
 
 .homepage__sidebar>li {
@@ -19,8 +24,11 @@
   cursor: pointer;
 }
 
-.homepage__sidebar-item:hover {
-  border-left: 3px solid red;
+.homepage__sidebar>li:hover {
+  border-left: 5px solid red;
+  background-color: #f4f4f4;
+  color: #3c3c3c;
+  padding-left: 5px;
 }
 
 .superbrand {
@@ -52,13 +60,21 @@
   border-radius: 0 0 40px 40px;
   padding: 20px;
   box-sizing: border-box;
+  display: flex;
+  justify-content: space-around;
 }
 
-.supbrand_box {
+.superbrand_box {
   width: 454px;
   background-color: #fff;
   border-radius: 10px;
   padding: 10px;
+  box-sizing: border-box;
+}
+
+.superbrand_items {
+  display: flex;
+  justify-content: space-around;
 }
 
 .superbrand_mainpic {
@@ -81,6 +97,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-35px, -10px);
+  object-fit: cover;
 }
 
 .mask {
@@ -92,10 +109,12 @@
   border-radius: 0 0 10px 10px;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
 }
-.mask p{
+
+.mask p {
+  width: 100%;
+  text-align: center;
   display: inline-block;
   margin: 0 auto;
 }
@@ -128,4 +147,43 @@
   border-style: solid;
   display: inline-block;
   transform: translate(3.5px, 1px);
+}
+
+
+.superbrand_item {
+  width: 105px;
+}
+
+.superbrand_item img {
+  width: 100%;
+  height: 105px;
+  border-radius: 10px 10px 0 0;
+}
+
+.superbrand_item p {
+  padding: 0 5px;
+  box-sizing: border-box;
+}
+
+.superbrand_item .productName {
+  width: 100%;
+  height: 28px;
+  color: #3c3c3c;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  /* more than 1 */
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+}
+
+.price {
+  widows: 100%;
+  color: #f34f59;
+  font-size: 16px;
+}
+
+.price::before {
+  content: '$';
+  font-size: 12px;
 }
